--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <div class="logo">Thinkfulbnb</div>
       <nav>
         <ul id="menu">
-          <li><a>Stay</a></li>
-          <li><a>About</a></li>
-          <li><a>Ideas</a></li>
-          <li><a>Host</a></li>
+          <li><a href="#stay">Stay</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#ideas">Ideas</a></li>
+          <li><a href="#host">Host</a></li>
         </ul>
       </nav>
     </header>
@@ -35,29 +35,78 @@
       <section id="stay">
         <h2>Find the perfect vacation rental</h2>
         <!-- Create a form here -->
+        <form>
+          <div class="form">
+
+            <label for="location">Location</label>
+            <input
+            id="location"
+            type="text"
+            name="location"
+            placeholder="Search destination"
+            />
+            </div>
+            <div class="form">
+              <label for="arrival">Arrive</label>
+              <input
+              id="arrival"
+              type="date"
+              name="arrival"
+              placeholder="mm/dd/yyyy"
+              />
+            </div>
+            <div class="form">
+              <label for="departure">Depart</label>
+              <input
+              id="departure"
+              type="date"
+              name="departure"
+              placeholder="mm/dd/yyyy"
+              />
+            </div>
+            <div class="form">
+              <label for="type">Type</label>
+              <select name="type" id="type" size="1">
+                <option value="apartment">Apartment</option>
+                <option value="townhouse">Town House</option>
+                <option value="home">House</option>
+                <option value="ranch">Ranch</option>
+                <option value="cabin">Cabin</option>
+              </select>
+            </div>
+            <button type="submit">Search</button>
+          </form>
       </section>
 
       <!-- About -->
       <section id="about" class="alternate-background">
-        <h2>About</h2>
+        <div class="group">
+          <h2>About</h2>
+            
+          <div class="item">
 
-        <img
-          src="images/vacation-rental-pool.png"
-          alt="Thinkfulbnb - Vacation rental pool"
-        />
-
-        <img
-          src="images/vacation-rental-inside-stone.png"
-          alt="Thinkfulbnb - Vacation rental inside stone"
-        />
-
-        <p>
-          Fusce porta odio nunc, eget pretium massa rutrum sit amet. Etiam
-          fringilla aliquam dapibus. Maecenas quis nisi sed turpis aliquam
-          porttitor eget ut quam. Sed vel scelerisque ex. Duis in pharetra
-          neque, at tempus lorem. Aenean mi magna, posuere at quam sed, euismod
-          gravida neque.
-        </p>
+            <img
+            src="images/vacation-rental-pool.png"
+            alt="Thinkfulbnb - Vacation rental pool"
+            />
+          </div>
+          <div class="item">
+            <img
+            src="images/vacation-rental-inside-stone.png"
+            alt="Thinkfulbnb - Vacation rental inside stone"
+            />
+          </div>  
+          
+          <div class="item">
+            <p>
+              Fusce porta odio nunc, eget pretium massa rutrum sit amet. Etiam
+              fringilla aliquam dapibus. Maecenas quis nisi sed turpis aliquam
+              porttitor eget ut quam. Sed vel scelerisque ex. Duis in pharetra
+              neque, at tempus lorem. Aenean mi magna, posuere at quam sed, euismod
+              gravida neque.
+            </p>
+          </div>
+        </div>
       </section>
 
       <!-- Ideas -->
